# rust_hash_avatar

./: Cargo.toml  README.md
examples/: test.rs
src/: lib.rs
