[package]
name = "hash_avatar"
version = "0.1.5"
license = "Apache-2.0/MIT"
authors = ["oldcat <924417424@qq.com>"]
edition = "2018"
readme = "README.md"
description = "rust生成随机头像的库"
categories = ["algorithms", "encoding", "filesystem", "graphics"]
repository = "https://github.com/t924417424/rust_hash_avatar"
homepage = "https://github.com/t924417424/rust_hash_avatar"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8.5" }
image = { version = "0.24.1", features = ["png"], default-features = false }